added new images, modified page

--- a/index.html
+++ b/index.html
@@ -28,10 +28,52 @@
      <div class="bar3"></div>
   </div>
   <!-- Sections -->
-  <section id="home"><a href="#" target="_blank">Valerija Design</a></section>
-  <section id="about"><h1>Learn More About Me</h1></section>
-  <section id="skills"><h1>These Are My Strengths</h1></section>
-  <section id="projects"><h1>These Are My Results</h1></section>
+  <!-- Home -->
+  <section id="home">
+    <a href="#" target="_blank">Valerija Design</a>
+      <h1 class="main-heading">Welcome to my personal page</h1>
+  </section>
+  <hr>
+<!-- About -->
+  <section id="about">
+    <div class="card">
+      <div class="text-container">
+        <h1>Learn More About Me</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim, neque quibusdam nisi totam libero rem voluptate, dolore soluta id voluptatibus consectetur deleniti minus vitae quis rerum doloremque, aperiam dolores! Nisi.</p>
+      </div>
+      <div class="image-container">
+        <img src="./assets/undraw_multitasking_re_ffpb.svg" alt="multitasking" />
+      </div> 
+    </div>
+    </section>
+    <hr>
+<!-- Skills -->
+  <section id="skills">
+    <div class="card">
+      <div class="image-container">
+        <img src="./assets/undraw_open_source_-1-qxw.svg" alt="undraw_open_source_-1-qxw">
+      </div>
+      <div class="text-container">
+        <h1>These Are My Strengths</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus saepe reiciendis, mollitia suscipit natus perferendis ipsa non unde, porro sapiente fugiat veniam nulla ut deserunt, recusandae minima maxime ullam doloremque?</p>
+      </div>
+    </div>
+    </section>
+    <hr>
+      <!--Projects  -->
+  <section id="projects">
+    <div class="card">
+      <div class="text-container">
+        <h1>These Are My Results</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim, neque quibusdam nisi totam libero rem voluptate, dolore soluta id voluptatibus consectetur deleniti minus vitae quis rerum doloremque, aperiam dolores! Nisi.</p>
+      </div>
+      <div class="image-container" id="last-image">
+        <img src="./assets/undraw_join_re_w1lh.svg" alt="team" id="l-img" />
+      </div> 
+    </div>
+    </section>
+    <hr>
+    <!-- Contact -->
   <section id="contact"><h1>Available Anytime</h1></section>
   <!-- Script -->
   <script src="script.js"></script>
