added some icons to contact section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Animated Navigation</title>
   <link rel="icon" type="image/png" href="./assets/favicon-32x32.png">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -74,7 +76,18 @@
     </section>
     <hr>
     <!-- Contact -->
-  <section id="contact"><h1>Available Anytime</h1></section>
+  <section id="contact">
+   <div class="contact-container">
+    <h1>Available Anytime</h1>
+    <div class="icon-contianer">
+      <i class="fab fa-twitter"></i>
+      <i class="fab fa-facebook"></i>
+      <i class="fab fa-instagram"></i>
+      <i class="fas fa-envelope"></i>
+      <i class="fab fa-github"></i>
+    </div>
+   </div>
+  </section>
   <!-- Script -->
   <script src="script.js"></script>
 </body>
